# dnss-cpp

./: .gitignore  CHANGELOG.html  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.json
.github/workflows/: ci.yml
scripts/: setup-system-dns.sh
src/: auto_tuner.cpp  auto_tuner.hpp  caching_resolver.cpp  caching_resolver.hpp  connection_controller.cpp  connection_controller.hpp  dns_protocol.cpp  dns_protocol.hpp  dns_server.cpp  dns_server.hpp  domain_map.cpp  domain_map.hpp  http_resolver.cpp  http_resolver.hpp  https_server.cpp  https_server.hpp  logger.hpp  main.cpp  monitor_server.cpp  monitor_server.hpp  perf_monitor.cpp  perf_monitor.hpp  resolver.hpp
tests/: test_basic.py
www/: index.html  monitor.sh
